topic/log/build_2026-03-24_04-19-03/python_topic/stderr.log
  File "/home/zqc/ros2_ws/src/portfolio/ROS2/topic/install/python_topic/lib/python3.10/site-packages/python_topic/pub_node.py", line 22
    self.get_logger()info(f'published:{msg}')
                     ^^^^
SyntaxError: invalid syntax

